--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: n8n-cercania-web
     env: node
     repo: https://github.com/cercaniaWeb/eneochoene
-    branch: master
+    branch: main
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
-    buildCommand: "NODE_OPTIONS=--max-old-space-size=8192 pnpm install && pnpm build"
-    startCommand: "pnpm start"
+    buildCommand: 'NODE_OPTIONS=--max-old-space-size=8192 pnpm install && pnpm build'
+    startCommand: 'pnpm start'
