--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     repo: https://github.com/cercaniaWeb/eneochoene
     branch: main
     buildCommand: pnpm install && pnpm build
-    startCommand: pnpm start
+    startCommand: N8N_PORT=$PORT pnpm start
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
@@ -36,8 +36,6 @@ services:
           property: password
       - key: N8N_ENCRYPTION_KEY
         generateValue: true
-      - key: N8N_PORT
-        value: 10000
 
 databases:
   - name: n8n-cercania-db
